Fixed workable.py - now working using API

--- a/templates/components/progress.html
+++ b/templates/components/progress.html
@@ -1,9 +1,12 @@
 <div class="mb-8">
   <div class="flex justify-between text-sm text-gray-600 mb-2">
-    <span>Step {{ step }} of 3</span>
+    <span>Step {{ step }} of 4</span>
   </div>
 
   <div class="w-full bg-gray-200 rounded-full h-2">
-    <div class="bg-blue-600 h-2 rounded-full" style="width: {{ progress }} percent"></div>
+    <div
+      class="bg-blue-600 h-2 rounded-full"
+      style="width: {{ progress }}%; transition: width 0.3s;">
+    </div>
   </div>
 </div>
