--- a/templates/onboarding_step3.html
+++ b/templates/onboarding_step3.html
@@ -65,8 +65,9 @@
       <input
         type="file"
         name="cv_file"
-        accept=".pdf,.doc,.docx,.txt"
+        accept=".pdf,.docx,.txt"
         class="w-full border border-gray-300 rounded-lg px-4 py-2 bg-white text-gray-700"
+        required
       />
 
       {% if profile and profile.cv_location %}
